xmobar: Plugin DebianUpdates

--- a/xmobar/.config/xmobar/xmobarrc.cabal
+++ b/xmobar/.config/xmobar/xmobarrc.cabal
@@ -12,6 +12,7 @@ build-type:     Simple
 library
   exposed-modules:
       Customs
+      Customs.DebianUpdates
       Customs.ShowText
       Monitors
   other-modules:
@@ -21,6 +22,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , process
     , xmobar
   default-language: Haskell2010
 
@@ -31,6 +33,7 @@ executable xmobar
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , process
     , xmobar
     , xmobarrc
   default-language: Haskell2010
