--- a/xmobar/.config/xmobar/package.yaml
+++ b/xmobar/.config/xmobar/package.yaml
@@ -3,7 +3,7 @@ version: 0.1.0.0
 description: My custom xmobarrc
 dependencies:
   - base >= 4.7 && < 5
-  # - text
+  - process
   - xmobar
 ghc-options:
   - -Wall
