xmobar: custom Volume plugin

--- a/xmobar/.config/xmobar/xmobarrc.cabal
+++ b/xmobar/.config/xmobar/xmobarrc.cabal
@@ -14,6 +14,7 @@ library
       Customs
       Customs.DebianUpdates
       Customs.ShowText
+      Customs.Volume
       Monitors
   other-modules:
       Paths_xmobarrc
