--- a/xmobar/.config/xmobar/xmobarrc.cabal
+++ b/xmobar/.config/xmobar/xmobarrc.cabal
@@ -24,6 +24,7 @@ library
   build-depends:
       base >=4.7 && <5
     , process
+    , split
     , xmobar
   default-language: Haskell2010
 
@@ -35,6 +36,7 @@ executable xmobar
   build-depends:
       base >=4.7 && <5
     , process
+    , split
     , xmobar
     , xmobarrc
   default-language: Haskell2010
