mylib: colorscheme for xmonad and xmobar in his own package

--- a/xmobar/.config/xmobar/xmobarrc.cabal
+++ b/xmobar/.config/xmobar/xmobarrc.cabal
@@ -23,6 +23,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , mylib
     , process
     , split
     , xmobar
@@ -35,6 +36,7 @@ executable xmobar
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , mylib
     , process
     , split
     , xmobar
