--- a/xmonad/.xmonad/myxmonad.cabal
+++ b/xmonad/.xmonad/myxmonad.cabal
@@ -15,6 +15,9 @@ library
       ./
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      X11
+    , base >=4.7 && <5
     , mylib
+    , xmonad
+    , xmonad-contrib
   default-language: Haskell2010
