--- a/xmonad/.xmonad/package.yaml
+++ b/xmonad/.xmonad/package.yaml
@@ -2,6 +2,9 @@ name: myxmonad
 version: 0.1.0.0
 dependencies:
   - base >= 4.7 && < 5
+  - xmonad
+  - xmonad-contrib
+  - X11
   - mylib
 ghc-options:
   - -Wall
