xmobar: headphones battery charge

--- a/xmobar/.config/xmobar/xmobarrc.cabal
+++ b/xmobar/.config/xmobar/xmobarrc.cabal
@@ -13,6 +13,7 @@ library
   exposed-modules:
       Customs
       Customs.DebianUpdates
+      Customs.HeadphonesBattery
       Customs.ShowText
       Customs.Volume
       Monitors
